	connections not spawned by scaler don't signal on the semaphore used
		by the scaler to wait for a connection to start now
	updated bind var docs
	updated faq
	fixed a bug where binding an oracle cursor didn't reset some values
		and would cause subsequent cursor binds to fail
	added note to docs about configuring sybase to dump transactions at
		each checkpoint

0.41 - added configure test for ruby.h
	added a couple of new functions to the mysql drop-in library
	updated mysql drop-in lib docs explaining how to use with PHP
	added documentation for timequeries params
	if SQLConnectW isn't supported, ODBC driver uses non-unicode calls
	added maxsessioncount parameter and connections use it to override
		ttl and bleed off
	applied Renat Sabitov's output bind patch
	added mysql last_insert_id() note to FAQ
	made it so oracle_home doesn't need to be set if oracle_sid is
		specified in tnsnames.ora format

0.40 - fixed readline detection in configure script
	fixed an uninitialized variable in sqlr-import
	changed clientSession() to call endSessionCommand()
		instead of endSession() so endSessionInternal() would be called
		every time
	fixed debug option in sqlr-import and sqlr-export
	fixed postgresql typemangling=no option
	set dbversion to unknown if sp_version wasn't found in freetds/sybase
	output bind variables' null indicator is reset now
	updated postgresql typemangling
	included Jesse Wagner's oracle 11g acsite patch
	added +1 to inbindvars[i].valuesize for CLOB's to make sure the NULL
		terminator is included
	postgresql connection uses PQparameterStatus if PQserverVersion doesn't
		exist and runs "select version()" if PQparameterStatus doesn't
		exist; to get the db version
	added mysql-5.1 drop-in replacement lib
	fixed a bug that caused result set data not to be cleaned up before
		a cursor is reused as a bind cursor
	changed string bind length to uint32_t from uint16_t
	added clearBinds() call after executeQuery() in perl dbi driver