@@ -60,6 +60,9 @@
 		and would cause subsequent cursor binds to fail
 	added note to docs about configuring sybase to dump transactions at
 		each checkpoint
+	applied Renat Sabitov's patch to kill scaler-started connections which
+		fail to signal on sem(8) because they either crashed or got
+		hung up trying to start
 
 0.41 - added configure test for ruby.h
 	added a couple of new functions to the mysql drop-in library
